--- a/src/Views/ViewLivros.fxml
+++ b/src/Views/ViewLivros.fxml
@@ -1,11 +1,11 @@
+<?xml version="1.0" encoding="UTF-8"?>
+
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.effect.ImageInput?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<Pane fx:controller="Controllers.ControllerViewLivros" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1366.0" xmlns:fx="http://javafx.com/fxml">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Views.ViewLivros">
     <children>
         <GridPane prefHeight="73.0" prefWidth="1366.0" style="-fx-background-color: '#1E90FF';">
             <columnConstraints>
@@ -26,34 +26,26 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <Button alignment="CENTER" contentDisplay="GRAPHIC_ONLY" mnemonicParsing="false" prefWidth="68.0" text="Button" GridPane.columnIndex="3">
+                <Button alignment="CENTER" contentDisplay="GRAPHIC_ONLY" mnemonicParsing="false" onAction="#goToViewEditlivros" prefWidth="68.0" text="Editar livro" GridPane.columnIndex="3">
                     <effect>
-                        <ImageInput>
-                            <source>
-                                <Image url="" />
-                            </source>
-                        </ImageInput>
+
                     </effect>
                     <cursor>
                         <Cursor fx:constant="S_RESIZE" />
                     </cursor></Button>
-                <Button mnemonicParsing="false" text="Button" underline="true" GridPane.columnIndex="2">
+                <Button mnemonicParsing="false" text="Novo livro" underline="true" GridPane.columnIndex="2">
                     <effect>
-                        <ImageInput>
-                            <source>
-                                <Image url="" />
-                            </source>
-                        </ImageInput>
+
                     </effect></Button>
                 <Label text="iLibrary" textFill="WHITE">
                     <font>
                         <Font name="Segoe UI" size="35.0" />
                     </font>
                 </Label>
-                <TextField prefHeight="25.0" prefWidth="400.0" style="-fx-background-color: '#1E90FF'; -fx-border-color: '#ffffff';" GridPane.columnIndex="1" />
+                <TextField accessibleText="Pesquisar" prefHeight="25.0" prefWidth="400.0" promptText="Pesquisar" style="-fx-background-color: '#1E90FF'; -fx-border-color: '#ffffff';" text="Pesquisar" GridPane.columnIndex="1" />
             </children>
         </GridPane>
-        <VBox layoutX="-2.0" layoutY="71.0" prefHeight="697.0" prefWidth="202.0" style="-fx-background-color: '#1E90FF';">
+        <VBox layoutX="-2.0" layoutY="71.0" prefHeight="697.0" prefWidth="210.0" style="-fx-background-color: '#1E90FF';">
             <children>
                 <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="208.0" style="-fx-background-color: '#1E90FF';" text="Livros" textFill="WHITE">
                     <font>
@@ -90,4 +82,3 @@
         </TableView>
     </children>
 </Pane>
-
