--- a/src/Views/ViewNewLivro.fxml
+++ b/src/Views/ViewNewLivro.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
@@ -72,10 +71,11 @@
             <rowConstraints>
                 <RowConstraints maxHeight="221.0" minHeight="10.0" prefHeight="115.0" vgrow="SOMETIMES" />
                 <RowConstraints maxHeight="191.0" minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="431.0" minHeight="10.0" prefHeight="431.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="191.0" minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="431.0" minHeight="10.0" prefHeight="431.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <GridPane prefHeight="182.0" prefWidth="1090.0">
+                <GridPane prefHeight="194.0" prefWidth="1096.0">
                     <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="319.0" minWidth="10.0" prefWidth="110.0" />
                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="522.0" minWidth="10.0" prefWidth="400.0" />
@@ -141,26 +141,10 @@
                     <rowConstraints>
                         <RowConstraints />
                     </rowConstraints>
-                    <children>
-                        <Button alignment="CENTER" contentDisplay="GRAPHIC_ONLY" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" prefHeight="24.0" prefWidth="57.0" text="Button" GridPane.columnIndex="4">
-                            <effect>
-
-                            </effect>
-                            <cursor>
-                                <Cursor fx:constant="S_RESIZE" />
-                            </cursor>
-                        </Button>
-                        <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="100.0" text="Remover Exemplar" underline="true" GridPane.columnIndex="3">
-                            <effect>
-
-                            </effect>
-                        </Button>
-                        <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="109.0" text="Adicionar Exemplar" underline="true" GridPane.columnIndex="2" GridPane.halignment="CENTER">
-                            <effect>
-
-                            </effect>
-                        </Button>
-                    </children>
+               <children>
+                  <Label text="Posicao" GridPane.rowIndex="2" />
+                  <TextField prefHeight="25.0" prefWidth="521.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+               </children>
                 </GridPane>
             </children>
         </GridPane>
