--- a/src/Views/ViewNewLivro.fxml
+++ b/src/Views/ViewNewLivro.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1366.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Views.ViewEditLivros">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1366.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Views.ViewNewLivro">
     <children>
         <GridPane prefHeight="73.0" prefWidth="1366.0" style="-fx-background-color: '#1E90FF';">
             <columnConstraints>
@@ -30,7 +30,7 @@
                         <Font name="Segoe UI" size="35.0" />
                     </font>
                 </Label>
-                <Button mnemonicParsing="false" prefHeight="32.0" prefWidth="115.0" text="Salvar livro" underline="true" GridPane.columnIndex="3" GridPane.rowIndex="1">
+                <Button mnemonicParsing="false" onAction="#newBook" prefHeight="32.0" prefWidth="115.0" text="Salvar livro" underline="true" GridPane.columnIndex="3" GridPane.rowIndex="1">
                     <effect>
 
                     </effect>
