--- a/src/Views/ViewNewLivro.fxml
+++ b/src/Views/ViewNewLivro.fxml
@@ -93,7 +93,7 @@
                                 <Font name="Segoe UI" size="22.0" />
                             </font>
                         </Label>
-                        <TextField id="FieldLivro" prefHeight="47.0" prefWidth="430.0" GridPane.columnIndex="1">
+                        <TextField id="FieldTitulo" fx:id="FieldTitulo" onAction="#newBook" prefHeight="47.0" prefWidth="430.0" GridPane.columnIndex="1">
                             <font>
                                 <Font name="Segoe UI" size="22.0" />
                             </font>
@@ -113,17 +113,17 @@
                                 <Font name="Segoe UI" size="22.0" />
                             </font>
                         </Label>
-                        <TextField id="FieldAutor" prefHeight="47.0" prefWidth="430.0" GridPane.columnIndex="4">
+                        <TextField id="FieldAutor" fx:id="FieldAutor" onAction="#newBook" prefHeight="47.0" prefWidth="430.0" GridPane.columnIndex="4">
                             <font>
                                 <Font name="Segoe UI" size="22.0" />
                             </font>
                         </TextField>
-                        <TextField id="FieldGenero" prefHeight="47.0" prefWidth="430.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                        <TextField id="FieldGenero" fx:id="FieldGenero" onAction="#newBook" prefHeight="47.0" prefWidth="430.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                             <font>
                                 <Font name="Segoe UI" size="22.0" />
                             </font>
                         </TextField>
-                        <TextField id="FieldEditora" prefHeight="47.0" prefWidth="430.0" GridPane.columnIndex="4" GridPane.rowIndex="1">
+                        <TextField id="FieldEditora" fx:id="FieldEditora" onAction="#newBook" prefHeight="47.0" prefWidth="430.0" GridPane.columnIndex="4" GridPane.rowIndex="1">
                             <font>
                                 <Font name="Segoe UI" size="22.0" />
                             </font>
@@ -143,7 +143,7 @@
                     </rowConstraints>
                <children>
                   <Label text="Posicao" GridPane.rowIndex="2" />
-                  <TextField prefHeight="25.0" prefWidth="521.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <TextField id= "FieldLocation" fx:id="FieldLocation" onAction="#newBook" prefHeight="25.0" prefWidth="521.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                </children>
                 </GridPane>
             </children>
