Fields in book details view now being populated with data from selected book.

--- a/src/Views/ViewLivros.fxml
+++ b/src/Views/ViewLivros.fxml
@@ -69,12 +69,14 @@
                 </Button>
             </children>
         </VBox>
-        <TableView fx:id="TableLivros" layoutX="208.0" layoutY="71.0" prefHeight="697.0" prefWidth="1166.0">
+        <TableView fx:id="TableLivros" onMouseClicked="#mySelectedBook" layoutX="208.0" layoutY="71.0" prefHeight="697.0" prefWidth="1166.0">
             <columns>
-            <TableColumn fx:id="TituloId" prefWidth="425.0" text="Titulo" />
+            <TableColumn fx:id="LivroId" prefWidth="52.0" text="Id" />
+            <TableColumn fx:id="TituloId" prefWidth="448.0" text="Titulo" />
                 <TableColumn fx:id="GeneroId" minWidth="20.0" prefWidth="155.0" text="Genero" />
                 <TableColumn fx:id="AutorId" minWidth="50.0" prefWidth="297.0" text="Autor" />
                 <TableColumn fx:id="PosicaoId" minWidth="50.0" prefWidth="288.0" text="Posicao" />
+                <TableColumn fx:id="EditoraId" minWidth="50.0" prefWidth="288.0" text="Posicao" />
             </columns>
             <cursor>
                 <Cursor fx:constant="DEFAULT" />
