--- a/src/Views/ViewEditLivros.fxml
+++ b/src/Views/ViewEditLivros.fxml
@@ -70,6 +70,7 @@
         <GridPane layoutX="240.0" layoutY="120.0" prefHeight="610.0" prefWidth="1096.0">
             <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             </columnConstraints>
             <rowConstraints>
                 <RowConstraints maxHeight="221.0" minHeight="10.0" prefHeight="115.0" vgrow="SOMETIMES" />
@@ -95,7 +96,7 @@
                                 <Font name="Segoe UI" size="22.0" />
                             </font>
                         </Label>
-                        <TextField id="FieldLivro" disable="true" prefHeight="47.0" prefWidth="430.0" GridPane.columnIndex="1">
+                        <TextField fx:id="FieldTitulo" disable="true" prefHeight="47.0" prefWidth="430.0" GridPane.columnIndex="1">
                             <font>
                                 <Font name="Segoe UI" size="22.0" />
                             </font>
@@ -115,17 +116,17 @@
                                 <Font name="Segoe UI" size="22.0" />
                             </font>
                         </Label>
-                        <TextField id="FieldAutor" disable="true" prefHeight="47.0" prefWidth="430.0" GridPane.columnIndex="4">
+                        <TextField fx:id="FieldAutor" disable="true" prefHeight="47.0" prefWidth="430.0" GridPane.columnIndex="4">
                             <font>
                                 <Font name="Segoe UI" size="22.0" />
                             </font>
                         </TextField>
-                        <TextField id="FieldGenero" disable="true" prefHeight="47.0" prefWidth="430.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                        <TextField fx:id="FieldGenero" disable="true" prefHeight="47.0" prefWidth="430.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                             <font>
                                 <Font name="Segoe UI" size="22.0" />
                             </font>
                         </TextField>
-                        <TextField id="FieldEditora" disable="true" prefHeight="47.0" prefWidth="430.0" GridPane.columnIndex="4" GridPane.rowIndex="1">
+                        <TextField fx:id="FieldEditora" disable="true" prefHeight="47.0" prefWidth="430.0" GridPane.columnIndex="4" GridPane.rowIndex="1">
                             <font>
                                 <Font name="Segoe UI" size="22.0" />
                             </font>
