--- a/src/Views/ViewEditLivros.fxml
+++ b/src/Views/ViewEditLivros.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -14,9 +13,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1366.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Views.ViewEditLivros">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1366.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Views.ViewEditLivros">
     <children>
-        <GridPane prefHeight="73.0" prefWidth="1366.0" style="-fx-background-color: '#1E90FF';">
+        <GridPane layoutX="1.0" prefHeight="73.0" prefWidth="1366.0" style="-fx-background-color: '#1E90FF';">
             <columnConstraints>
                 <ColumnConstraints fillWidth="false" halignment="CENTER" hgrow="SOMETIMES" maxWidth="480.0" minWidth="10.0" prefWidth="216.0" />
                 <ColumnConstraints fillWidth="false" halignment="CENTER" hgrow="SOMETIMES" maxWidth="1070.0" minWidth="0.0" prefWidth="151.0" />
@@ -33,7 +32,7 @@
                         <Font name="Segoe UI" size="35.0" />
                     </font>
                 </Label>
-                <Button fx:id="BtnEditBook" onAction="#editBook" mnemonicParsing="false" prefHeight="32.0" prefWidth="115.0" text="Editar livro" underline="true" GridPane.columnIndex="3" GridPane.rowIndex="1">
+                <Button fx:id="BtnEditBook" mnemonicParsing="false" onAction="#editBook" prefHeight="32.0" prefWidth="115.0" text="Editar livro" underline="true" GridPane.columnIndex="3" GridPane.rowIndex="1">
                     <effect>
 
                     </effect>
@@ -67,29 +66,28 @@
         </VBox>
         <TitledPane animated="false" layoutX="223.0" layoutY="-272.0" text="untitled" />
         <TitledPane animated="false" layoutX="263.0" layoutY="-197.0" text="untitled" />
-        <GridPane layoutX="240.0" layoutY="120.0" prefHeight="610.0" prefWidth="1096.0">
+        <GridPane layoutX="244.0" layoutY="76.0" prefHeight="654.0" prefWidth="1092.0">
             <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="1096.0" minWidth="10.0" prefWidth="1096.0" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="538.0" minWidth="0.0" prefWidth="0.0" />
             </columnConstraints>
             <rowConstraints>
-                <RowConstraints maxHeight="221.0" minHeight="10.0" prefHeight="115.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="191.0" minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="221.0" minHeight="10.0" prefHeight="141.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="191.0" minHeight="10.0" prefHeight="38.0" vgrow="SOMETIMES" />
                 <RowConstraints maxHeight="431.0" minHeight="10.0" prefHeight="431.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
                 <GridPane prefHeight="115.0" prefWidth="1022.0">
                     <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="319.0" minWidth="10.0" prefWidth="82.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="522.0" minWidth="10.0" prefWidth="176.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="637.0" minWidth="10.0" prefWidth="21.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="637.0" minWidth="10.0" prefWidth="102.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="421.0" minWidth="10.0" prefWidth="188.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="522.0" minWidth="10.0" prefWidth="363.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="637.0" minWidth="10.0" prefWidth="149.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="421.0" minWidth="10.0" prefWidth="404.0" />
                     </columnConstraints>
                     <rowConstraints>
-                  <RowConstraints maxHeight="582.0" minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
-                        <RowConstraints maxHeight="582.0" minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
-                        <RowConstraints maxHeight="598.0" minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="582.0" minHeight="10.0" prefHeight="36.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="582.0" minHeight="10.0" prefHeight="37.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="598.0" minHeight="10.0" prefHeight="43.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                     <children>
                         <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="65.0" prefWidth="167.0" style="-fx: 60px;" text="Titulo">
@@ -97,12 +95,12 @@
                                 <Font name="Segoe UI" size="22.0" />
                             </font>
                         </Label>
-                        <TextField fx:id="FieldTitulo" disable="true" prefHeight="47.0" prefWidth="430.0" GridPane.columnIndex="1">
+                        <TextField fx:id="FieldTitulo" disable="true" prefHeight="47.0" prefWidth="430.0" GridPane.columnIndex="1" GridPane.columnSpan="3">
                             <font>
                                 <Font name="Segoe UI" size="22.0" />
                             </font>
                         </TextField>
-                        <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="65.0" prefWidth="167.0" style="-fx: 60px;" text="Autor" GridPane.columnIndex="3" GridPane.rowIndex="1">
+                        <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="65.0" prefWidth="167.0" style="-fx: 60px;" text="Autor" GridPane.columnIndex="2" GridPane.rowIndex="1">
                             <font>
                                 <Font name="Segoe UI" size="22.0" />
                             </font>
@@ -112,12 +110,12 @@
                                 <Font name="Segoe UI" size="22.0" />
                             </font>
                         </Label>
-                        <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="65.0" prefWidth="167.0" style="-fx: 60px;" text="Editora" GridPane.columnIndex="3" GridPane.rowIndex="2">
+                        <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="65.0" prefWidth="167.0" style="-fx: 60px;" text="Editora" GridPane.columnIndex="2" GridPane.rowIndex="2">
                             <font>
                                 <Font name="Segoe UI" size="22.0" />
                             </font>
                         </Label>
-                        <TextField fx:id="FieldAutor" disable="true" prefHeight="47.0" prefWidth="430.0" GridPane.columnIndex="4" GridPane.rowIndex="1">
+                        <TextField fx:id="FieldAutor" disable="true" prefHeight="47.0" prefWidth="430.0" GridPane.columnIndex="3" GridPane.rowIndex="1">
                             <font>
                                 <Font name="Segoe UI" size="22.0" />
                             </font>
@@ -127,13 +125,19 @@
                                 <Font name="Segoe UI" size="22.0" />
                             </font>
                         </TextField>
-                        <TextField fx:id="FieldEditora" disable="true" prefHeight="47.0" prefWidth="430.0" GridPane.columnIndex="4" GridPane.rowIndex="2">
+                        <TextField fx:id="FieldEditora" disable="true" prefHeight="47.0" prefWidth="430.0" GridPane.columnIndex="3" GridPane.rowIndex="2">
                             <font>
                                 <Font name="Segoe UI" size="22.0" />
                             </font>
                         </TextField>
-                  <Label text="Local" GridPane.rowIndex="1" />
-                  <TextField fx:id="FieldLocation" disable="true" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="65.0" prefWidth="167.0" style="-fx: 60px;" text="Local" textAlignment="CENTER" GridPane.rowIndex="1">
+                     <font>
+                        <Font name="Segoe UI" size="22.0" />
+                     </font></Label>
+                  <TextField fx:id="FieldLocation" disable="true" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                     <font>
+                        <Font name="Segoe UI" size="22.0" />
+                     </font></TextField>
                     </children>
                 </GridPane>
                 <TableView prefHeight="399.0" prefWidth="1096.0" GridPane.rowIndex="2">
@@ -148,8 +152,9 @@
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                         <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="846.0" minWidth="10.0" prefWidth="322.0" />
                         <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="300.0" minWidth="0.0" prefWidth="0.0" />
-                        <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="300.0" minWidth="10.0" prefWidth="75.0" />
-                        <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="198.0" minWidth="10.0" prefWidth="81.0" />
+                        <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="402.0" minWidth="10.0" prefWidth="367.0" />
+                        <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="319.0" minWidth="10.0" prefWidth="126.0" />
+                  <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="198.0" minWidth="0.0" prefWidth="0.0" />
                     </columnConstraints>
                     <rowConstraints>
                         <RowConstraints />
@@ -160,19 +165,12 @@
                                 <Font name="Segoe UI" size="25.0" />
                             </font>
                         </Label>
-                        <Button alignment="CENTER" contentDisplay="GRAPHIC_ONLY" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" prefHeight="24.0" prefWidth="57.0" text="Button" GridPane.columnIndex="4">
-                            <effect>
-
-                            </effect>
-                            <cursor>
-                                <Cursor fx:constant="S_RESIZE" />
-                            </cursor>
-                        </Button>
-                        <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="100.0" text="Remover Exemplar" underline="true" GridPane.columnIndex="3">
+                        <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="25.0" prefWidth="116.0" text="Remover Exemplar" underline="true" GridPane.columnIndex="3">
                             <effect>
 
                             </effect>
                         </Button>
+                  <Button mnemonicParsing="false" text="Adicionar Exemplar" GridPane.columnIndex="4" />
                     </children>
                 </GridPane>
             </children>
