--- a/src/Views/ViewEditLivros.fxml
+++ b/src/Views/ViewEditLivros.fxml
@@ -166,7 +166,7 @@
                                 <Font name="Segoe UI" size="25.0" />
                             </font>
                         </Label>
-                        <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="25.0" prefWidth="116.0" text="Remover Exemplar" underline="true" GridPane.columnIndex="3">
+                        <Button fx:id="BtnRemoveExemplar" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#removeSelectedExemplar" prefHeight="25.0" prefWidth="116.0" text="Remover Exemplar" underline="true" GridPane.columnIndex="3">
                             <effect>
 
                             </effect>
