--- a/src/Views/ViewLivros.fxml
+++ b/src/Views/ViewLivros.fxml
@@ -1,18 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.*?>
 <?import javafx.scene.Cursor?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
-
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Views.ViewLivros">
     <children>
         <GridPane prefHeight="73.0" prefWidth="1366.0" style="-fx-background-color: '#1E90FF';">
@@ -26,7 +17,9 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#goToViewEditlivros" prefHeight="25.0" prefWidth="94.0" text="Detalhes do livro" GridPane.columnIndex="3">
+                <Button alignment="CENTER" contentDisplay="GRAPHIC_ONLY" mnemonicParsing="false"
+                        onAction="#goToViewEditlivros" prefHeight="25.0" prefWidth="94.0" text="Detalhes do livro"
+                        GridPane.columnIndex="3">
                     <effect>
 
                     </effect>
@@ -69,7 +62,8 @@
                 </Button>
             </children>
         </VBox>
-        <TableView fx:id="TableLivros" onMouseClicked="#mySelectedBook" layoutX="208.0" layoutY="71.0" prefHeight="697.0" prefWidth="1166.0">
+        <TableView fx:id="TableLivros" layoutX="208.0" layoutY="71.0" onMouseClicked="#mySelectedBook"
+                   prefHeight="697.0" prefWidth="1166.0">
             <columns>
             <TableColumn fx:id="LivroId" prefWidth="52.0" text="Id" />
             <TableColumn fx:id="TituloId" prefWidth="448.0" text="Titulo" />
