--- a/src/Views/ViewNewLivro.fxml
+++ b/src/Views/ViewNewLivro.fxml
@@ -1,24 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.TitledPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
-
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1366.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Views.ViewNewLivro">
     <children>
         <GridPane prefHeight="73.0" prefWidth="1366.0" style="-fx-background-color: '#1E90FF';">
             <columnConstraints>
                 <ColumnConstraints fillWidth="false" halignment="CENTER" hgrow="SOMETIMES" maxWidth="480.0" minWidth="10.0" prefWidth="216.0" />
                 <ColumnConstraints fillWidth="false" halignment="CENTER" hgrow="SOMETIMES" maxWidth="1070.0" minWidth="0.0" prefWidth="151.0" />
-                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="922.0" minWidth="10.0" prefWidth="865.0" />
-                <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="480.0" minWidth="10.0" prefWidth="134.0" />
+                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="922.0" minWidth="10.0"
+                                   prefWidth="889.0"/>
+                <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="480.0" minWidth="10.0"
+                                   prefWidth="110.0"/>
             </columnConstraints>
             <rowConstraints>
                 <RowConstraints maxHeight="3.0" minHeight="0.0" prefHeight="0.0" />
@@ -30,12 +24,15 @@
                         <Font name="Segoe UI" size="35.0" />
                     </font>
                 </Label>
-                <Button mnemonicParsing="false" onAction="#newBook" prefHeight="32.0" prefWidth="115.0" text="Salvar livro" underline="true" GridPane.columnIndex="3" GridPane.rowIndex="1">
+                <Button mnemonicParsing="false" onAction="#newBook" prefHeight="28.0" prefWidth="77.0"
+                        text="Salvar livro" underline="true" GridPane.columnIndex="3" GridPane.rowIndex="1">
                     <effect>
 
                     </effect>
                 </Button>
-            <Button mnemonicParsing="false" onAction="#goToViewLivros" prefHeight="25.0" prefWidth="73.0" text="Voltar" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                <Button mnemonicParsing="false" onAction="#goToViewLivros" prefHeight="25.0" prefWidth="73.0"
+                        style="-fx-background-image: './icons/add;'" text="Voltar" GridPane.columnIndex="1"
+                        GridPane.rowIndex="1"/>
             </children>
         </GridPane>
         <VBox layoutX="-2.0" layoutY="71.0" prefHeight="697.0" prefWidth="202.0" style="-fx-background-color: '#1E90FF';">
