--- a/src/biblioteca/biblioteca.fxml
+++ b/src/biblioteca/biblioteca.fxml
@@ -1,4 +1,4 @@
 <?import javafx.scene.layout.GridPane?>
-<GridPane fx:controller="biblioteca.Controller_Publicacao"
+<GridPane fx:controller="Controllers.Controller_Publicacao"
           xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
 </GridPane>
